Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8282616

[lworld] C2 does not properly handle circular .ref or value class fields

XMLWordPrintable

      Circular .ref or value class fields lead to a segmentation fault due to stack overflow during C2 compilation. The root cause is infinite recursion when C2 creates IR for scalarizing these fields.

            thartmann Tobias Hartmann
            thartmann Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: