8282616: [lworld] C2 does not properly handle circular .ref or value class fields